# blog

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Procfile  compose.yaml  deploy.sh  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.js
.github/workflows/: ci.yaml
article/: models.py
article/migrations/: 0001_initial.py
blog/: urls.py
blog/settings/: base.py  dev.py  production.py
blog/static/css/: blog.css
core/: blocks.py  models.py
docker/django/: Dockerfile
docker/nginx/: nginx.conf
docker/nginx/templates/: default.conf.template
home/: models.py
home/migrations/: 0003_homepage_intro.py  0004_homepage_sidebar.py  0005_alter_homepage_sidebar.py
pattern_overrides/templatetags/: menu_tags.py  wagtailcore_tags.py
patterns/templates/patterns/: base.html  base_pattern.html
scripts/: deploy.sh
search/: views.py
src/: conftest.py  manage.py
src/activity/: apps.py  blocks.py  factories.py  models.py  signals.py  urls.py  views.py
src/activity/migrations/: 0001_initial.py  0002_alter_activity_options.py
src/activity/templatetags/: activity_tags.py
src/activity/test/: apps.py  factories.py  models.py
src/activity/tests/: test_activities.py  test_activity_manager.py  test_activity_signals.py  test_activity_views.py
src/analytics/: client.py  factories.py  models.py  views.py  wagtail_hooks.py
src/analytics/migrations/: 0001_analyticssettings.py
src/analytics/templatetags/: analytics_tags.py
src/analytics/tests/: test_analytics.py  test_analytics_tags.py  test_client.py
src/article/: factories.py  models.py
src/article/migrations/: 0002_alter_articlepage_body.py  0003_change_articlepage_parent_to_taggablepage.py  (+2 more)
src/blog/: urls.py  views.py
src/book/: factories.py  models.py  views.py  wagtail_hooks.py
src/core/: blocks.py  factories.py  models.py  urls.py  utilities.py  views.py  wagtail_hooks.py
src/functional_tests/: conftest.py  test_e2e.py
src/home/: blocks.py  factories.py  models.py
src/pattern_overrides/: pattern_contexts.py
src/search/: blocks.py  factories.py  forms.py  models.py  urls.py  views.py
src/vite/: apps.py
(+184 files in other folders)
