[project]
name = "lasse-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gunicorn>=23.0.0",
    "psycopg>=3.3.1",
    "wagtail>=7.1.2",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.21.0",
    "django-debug-toolbar>=6.1.0",
    "django-pattern-library>=1.5.0",
]
