[project]
name = "lasse-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gunicorn>=23.0.0",
    "psycopg>=3.3.1",
    "wagtail>=7.1.2",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.21.0",
    "django-debug-toolbar>=6.1.0",
    "django-pattern-library>=1.5.0",
    "djhtml>=3.0.10",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "ruff>=0.14.10",
]


[tool.ruff]
extend-exclude = ["**/migrations/*.py"]


[tool.pytest]
pythonpath = ["src"]
DJANGO_SETTINGS_MODULE = "blog.settings.test"
python_files = ["**/tests/test_*.py"]